Implemented get method to fetch cars from backend

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+    margin: 0px;
+}
+
+.color-grey {
+    background-color: rgb(243, 243, 243);
+}
+
+.dropshadow {
+    box-shadow: 0 0 5px;
+}
