--- a/frontend/src/app/car-overview/car-overview.component.html
+++ b/frontend/src/app/car-overview/car-overview.component.html
@@ -5,7 +5,7 @@
         <div class="actions">
             <i class="fa-solid fa-magnifying-glass"></i>
             <i class="fa-solid fa-filter"></i>
-            <button class="actionButton" (click)="openModal()">
+            <button class="actionButton" (click)="newCar()">
                 New
                 <i class="fa-solid fa-plus"></i>
             </button>
@@ -13,7 +13,7 @@
 
         <hr>
         <div class="grid">
-            <app-card *ngFor="let car of carList"
+            <app-card *ngFor="let car of carList" (editCar)="editCar($event)" (deleteCar)="deleteCar($event)"
                 [car]="car"
             ></app-card>
         </div>
