--- a/frontend/src/app/card/card.component.scss
+++ b/frontend/src/app/card/card.component.scss
@@ -3,7 +3,7 @@
     width: 200px;
     height: 200px;
     background-color: rgb(241, 241, 241);
-    border-radius: 5px;
+    border-radius: 20px;
 }
 
 .card:hover {
@@ -15,7 +15,7 @@
     width: 100%;
     height: 70%;
     background-color: rgb(232, 232, 232);
-    border-radius: 5px 5px 0 0;
+    border-radius: 20px 20px 0 0;
 }
 
 .makeAndModel {
@@ -31,4 +31,18 @@
     margin-bottom: 0px;
     font-size: 10px;
     font-weight: lighter;
+}
+
+.deleteButton {
+    margin-top: 8px;
+    margin-right: 10px;
+    right: 0;
+    position: absolute;
+    color: rgb(156, 156, 156);
+}
+
+.deleteButton:hover {
+    color: red;
+    scale: 150%;
+    
 }
