--- a/frontend/src/app/card/card.component.html
+++ b/frontend/src/app/card/card.component.html
@@ -3,5 +3,5 @@
         <i class="fa-solid fa-xmark deleteButton" (click)="delete($event)"></i>
     </div>
     <h6 class="makeAndModel">{{car?.make}} {{car?.model}}</h6>
-    <h6 class="milage">{{car?.milage}} km</h6>
+    <h6 class="milage">{{car?.mileage}} km</h6>
 </div>
